# modules/patrolpoint/dto/dto.go
@@ -14,9 +14,16 @@ func NewPatrolPointDto() PatrolPointDto {
 }
 
 func (d *dto) ToPatrolPointDTO(point models.PatrolPoint) PatrolPointDTO {
+	var area *AreaDTO
+	if point.Area != nil {
+		area = &AreaDTO{ID: point.Area.ID, Name: point.Area.Name}
+	}
+
 	return PatrolPointDTO{
 		ID:                       point.ID,
 		UnitID:                   point.UnitID,
+		AreaID:                   point.AreaID,
+		Area:                     area,
 		Name:                     point.Name,
 		Location:                 point.Location,
 		NFCCode:                  point.NFCCode,
